-----------
Maintenance release of Scid 3.7.2 fixing a bug in search position

 =============================================================================
|                                                                             |
|                              scid-4.0                                       |
|                                                                             |
|                           [September 2009]                                     |
|                                                                             |
 =============================================================================
- Fixes :
---------
	* serious game play when use book is checked and book name is empty leads to crash (thanks to Benigno Hernández)
	* Check for engines allowed in eMail games caused an exception (noENG not set)
	* Internet play (FICS) : 
	  - the first offer not displayed on the graph
		- hardened the code to avoid the (rare) case where the opponent moves but Scid does not reflect it. Still the need to see wether it is a FICS bug or a Scid one.
		- IP address of FICS server is cached (faster login)
		- in case of a network error, quit FICS without popping tons of error messages
	* Sound : when another application uses the sound device and once it is released, forces Scid to reset pending sounds hence be able to use sounds again (this has the drawback of limiting maximum sound length to 5 seconds)
	* Move annoucement : if pieces are translated, announces moves using english sounds (as only english annoucements are supported)
	* Tree window : fixed game loading from browse game window (when the Tree was not locked)
	* fixed status bar detailing some menu entries
	* fixed context menu in notebook tabs for FICS window
	* fixed a bug selecting more than 3 times an empty square : entering a move with this square as target was difficult (lower in ::board::colorSquare)