@@ -790,7 +790,7 @@ Maintenance release of Scid 3.7.2 fixing a bug in search position
 |                                                                             |
 |                              scid-4.0                                       |
 |                                                                             |
-|                           [September 2009]                                     |
+|                           [September 2009]                                  |
 |                                                                             |
  =============================================================================
 - Fixes :
@@ -854,3 +854,10 @@ Maintenance release of Scid 3.7.2 fixing a bug in search position
 	* updated spanish translation (thanks to Benigno Hernández)
 	* updated swedish translation (thanks to Hans Eriksson)
 	* updated german translation
+
+scid-4.1
+========
+- Fixes :
+---------
+- entering comments for last move of a line was broken
+
